qa/apps/datagrid-service/deployments-overrides.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datagrid-service
spec:
  template:
    spec:
      imagePullSecrets:
      - name: images-pull
      volumes:
      - name: postgres-ca-certificate
        secret:
          secretName: postgres-qa-ca-certificate
          defaultMode: 0555
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      - name: ca-bundle
        emptyDir: {}
      - name: corefile
        configMap:
          name: coredns-zonefiles-corefile
          defaultMode: 0444
      - name: zonefile
        configMap:
          name: qa-domain-zonefile
          defaultMode: 0444
      - name: zonefile-copy
        emptyDir: {}
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 127.0.0.1
        - 169.254.25.10
        searches:
        - search
        - cqdg-qa.svc.cluster.qa
        - svc.cluster.qa
        - cluster.qa
        - openstacklocal
        options:
        - name: ndots
          value: "5"
      containers:
      - name: coredns
        image: coredns/coredns:1.8.4
        command: ["/coredns"]
        args: ["-conf", "/opt/corefile/Corefile"]
        volumeMounts:
        - name: corefile
          mountPath: /opt/corefile
          readOnly: true
        - name: zonefile-copy
          mountPath: /opt/zonefiles
          readOnly: true
      - name: datagrid-service
        image: index.docker.io/ferlabcrsj/datagrid-service:1.0.0 # {"$imagepolicy": "cqdg-qa-fluxcd:datagrid-service"}
        volumeMounts:
        - name: postgres-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        - name: ca-bundle
          mountPath: /opt/ca-bundle
          readOnly: true
